En este commit terminé de añadir lo de clases, falta arreglar el responsive

--- a/paginas/articulos.html
+++ b/paginas/articulos.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="velas, yoga, meditación, ejercicio, estirilla, incienso">
+    <meta name="description" content="Explora nuestra selección de artículos de meditación en línea y encuentra todo lo que necesitas para crear el espacio perfecto para tu práctica de meditación.ofrecemos todo lo necesario para ayudarte a encontrar la paz interior y la relajación. ¡Comienza a mejorar tu práctica de meditación con nuestros artículos ahora!">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -80,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                    <img class="my-4" src="../multimedia/imagenes/articulos/esterilla1.jpg" alt="">
+                    <img class="my-4" src="../multimedia/imagenes/articulos/esterilla1.jpg" alt="Imagen esterilla 1">
                 </div>
             </div>
         </div>
@@ -92,7 +94,7 @@
             <h2 class="colorfondotitulojogger mt-3">¿Has usado velas aromáticas?</h2>
             <div class="row d-flex flex-wrap">
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                    <img class="my-4" src="../multimedia/imagenes/articulos/velacanela.jpg" alt="">
+                    <img class="my-4" src="../multimedia/imagenes/articulos/velacanela.jpg" alt="Imagen vela aromatica canela">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center tarjeta2 flex-wrap">
                     
@@ -110,7 +112,7 @@
                     <button class="boton my-3"><a href="#">Comprar</a></button>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                    <img class="my-4" src="../multimedia/imagenes/articulos/estatuilla2.jpg" alt="">
+                    <img class="my-4" src="../multimedia/imagenes/articulos/estatuilla2.jpg" alt="Imagen estatuilla budha">
                 </div>
             </div>
         </div>
@@ -118,7 +120,7 @@
             <h2 class="colorfondotitulojogger mt-3">Demás ítems útiles</h2>
             <div class="row d-flex flex-wrap">
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                    <img class="my-4" src="../multimedia/imagenes/articulos/varios.jpg" alt="">
+                    <img class="my-4" src="../multimedia/imagenes/articulos/varios.jpg" alt="Imagen otros items utiles">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center tarjeta2 flex-wrap">
                     
