--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="nosotros, comunidad, yoga, meditación, latinoamerica">
+    <meta name="description" content="Somos una comunidad de yoga nacida en Latinoamérica con el propósito de ayudarte a conectarte con tu cuerpo, mente y espíritu. Nuestro objetivo es brindarte una experiencia de yoga auténtica y accesible, con una comunidad de apoyo. Únete a nosotros y comienza tu camino hacia la paz interior y la armonía.">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -60,13 +62,13 @@
     <main>
         <div class="bloqueimghorizontal">
             <h2 class="h2horizontal">Sobre nosotros</h2>
-            <img class="imagenhorizontal" src="../multimedia/imagenes/nosotros/nosotros5.jpg" alt="">
+            <img class="imagenhorizontal" src="../multimedia/imagenes/nosotros/nosotros5.jpg" alt="Imagen portada">
         </div>
         <div class="container my-5">
             <div class="row d-flex ">
                 <p class="my-4 contenedorpantalonbackgroundcolor">Somos una tienda que nació con la idea de brindar apoyo y ... ... ...  a la comunidad de meditadores en suramerica Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, enim? Eum ducimus doloribus natus reiciendis earum recusandae, cupiditate eos nulla sunt. Ullam vero eligendi atque magni harum dolore eum? Reiciendis!
                 </p>
-                <img src="../multimedia/imagenes/nosotros/suramerica.jpg" alt="">
+                <img src="../multimedia/imagenes/nosotros/suramerica.jpg" alt="imagen para suramerica">
                 <p class="my-4 contenedorpantalonbackgroundcolor">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quam, nesciunt, ullam laudantium voluptatem dolore dolorum neque debitis impedit excepturi eveniet? Ea sapiente inventore voluptatum temporibus recusandae unde ipsum aliquid?</p>
             </div>
         </div>
@@ -90,7 +92,7 @@
         <div class="container my-5">
             <h2 class="my-5 colorfondotitulotop ">Somos nuestro equipo</h2>
             <div class=" d-flex ">
-                <img class="imgexpandir" src="../multimedia/imagenes/nosotros/nosotros_motivacion.jpg" alt="">
+                <img class="imgexpandir" src="../multimedia/imagenes/nosotros/nosotros_motivacion.jpg" alt="imagen equipo sonriente">
             </div>
         </div>
 
