--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="ropa, yoga, shorts, pantalones, tops">
+    <meta name="description" content="Encuentra la ropa perfecta para tu práctica de yoga en nuestra tienda en línea. Descubre nuestra selección de shorts, tops y pantalones de yoga cómodos y de alta calidad para ayudarte a concentrarte en tu práctica. ¡Compra ahora y mejora tu experiencia de yoga con nuestra ropa!">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -64,15 +66,15 @@
             <div class="gridhijo2">
                 <a class="contenedorropa contenedorropa1" href="#tops">
                     <h2>Tops</h2>
-                    <img src="../multimedia/imagenes/ropa/tops/topportadda.jpg" alt="">
+                    <img src="../multimedia/imagenes/ropa/tops/topportadda.jpg" alt="Imagen portada tops">
                 </a>
                 <a class="contenedorropa contenedorropa1" href="#jogger">
                     <h2>Joggers</h2>
-                    <img src="../multimedia/imagenes/ropa/pantalones/joggerportada.jpg" alt="">
+                    <img src="../multimedia/imagenes/ropa/pantalones/joggerportada.jpg" alt="Imagen portada de Joggers">
                 </a>
                 <a class="contenedorropa contenedorropa1" href="#shorts">
                     <h2>Shorts</h2>
-                    <img src="../multimedia/imagenes/ropa/shorts/shortportada.jpg" alt="">
+                    <img src="../multimedia/imagenes/ropa/shorts/shortportada.jpg" alt="Imagen portada de shorts">
                 </a>
             </div>
         </div>
@@ -84,21 +86,21 @@
             <div id="tops" class="contenedormain2">
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top1.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top1.jpg" alt="top blanco">
                         <div>
                             <p>Top blanco</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top2.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top2.jpg" alt="top negro">
                         <div>
                             <p>Top negro</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top5.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top5.jpg" alt="top gris">
                         <div>
                             <p>Top gris</p>
                             <button><a href="#">Comprar</a></button>
@@ -107,21 +109,21 @@
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top3.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top3.jpg" alt="top lila">
                         <div>
                             <p>Top lila</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top4.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top4.jpg" alt="top rosa">
                         <div>
                             <p>Top rosa</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/tops/top6.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/tops/top6.jpg" alt="top azul">
                         <div>
                             <p>Top azul</p>
                             <button><a href="#">Comprar</a></button>
@@ -139,21 +141,21 @@
             <div id="jogger" class="contenedormain2">
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger1.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger1.jpg" alt="jogger fucsia">
                         <div>
                             <p>Jogger fucsia</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger2.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger2.jpg" alt="jogger rosa">
                         <div>
                             <p>Jogger rosa</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger3.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger3.jpg" alt="jogger violeta">
                         <div>
                             <p>Jogger violeta</p>
                             <button><a href="#">Comprar</a></button>
@@ -162,21 +164,21 @@
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger4.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger4.jpg" alt="jogger negro">
                         <div>
                             <p>Jogger negro</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger5.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger5.jpg" alt="jogger azul">
                         <div>
                             <p>Jogger azul</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/pantalones/jogger6.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/pantalones/jogger6.jpg" alt="jogger salmón">
                         <div>
                             <p>Jogger salmón</p>
                             <button><a href="#">Comprar</a></button>
@@ -194,21 +196,21 @@
             <div id="shorts" class="contenedormain2">
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short1.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short1.jpg" alt="Short blanco">
                         <div>
                             <p>Short blanco</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short2.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short2.jpg" alt="Short negro">
                         <div>
                             <p>Short negro</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short3.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short3.jpg" alt="Short morado">
                         <div>
                             <p>Short morado</p>
                             <button><a href="#">Comprar</a></button>
@@ -217,21 +219,21 @@
                 </div>
                 <div class="contenedortops">
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short4.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short4.jpg" alt="Short gris">
                         <div>
                             <p>Short gris</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short5.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short5.jpg" alt="Short azul">
                         <div>
                             <p>Short azul</p>
                             <button><a href="#">Comprar</a></button>
                         </div>
                     </div>
                     <div class="contenedormain3">
-                        <img src="../multimedia/imagenes/ropa/shorts/short6.jpg" alt="">
+                        <img src="../multimedia/imagenes/ropa/shorts/short6.jpg" alt="Short azul rey">
                         <div>
                             <p>Short azul rey</p>
                             <button><a href="#">Comprar</a></button>
