--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="meditación, yoga, ropa, clases, velas, articulos, comunidad">
+  <meta name="description" content="Encuentra todo lo que necesitas para mejorar tu práctica de meditación y yoga en nuestra tienda en línea. ¡Explora nuestra tienda en línea hoy y comienza a transformar tu práctica de meditación y yoga">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -23,7 +25,7 @@
 <header>
   <nav id="top" class="navbar navbar-expand-lg navbar-light bg-light estiloa m-3">
     <div class="container-fluid">
-      <img class="logo-small me-5" src="./multimedia/imagenes/logob.JPG" alt="logo">
+      <img class="logo-small me-5" src="./multimedia/imagenes/logob.JPG" alt="logo de tienda">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -75,7 +77,7 @@
       <section class="row">
         <div class="col-xl-6 col-sm-12 col-md-6 d-flex justify-content-center align-items-center flex-column">
           <h2>¿Porqué <span>meditar</span>?</h2>
-          <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="">
+          <img src="./multimedia/imagenes/imagenes index/meditar.jpg" alt="Imagen de meditación">
         </div>
         <div class="col-xl-6 col-sm-12 col-md-6 my-5 d-flex align-items-center justify-content-center p-5">
           <p>Meditar mejora la salud mental y emocional al reducir el estrés, la ansiedad y la depresión. Mejora la
@@ -92,7 +94,7 @@
             llevar una vida más equilibrada y satisfactoria</p>
         </div>
         <div class="col-xl-6 col-sm-12 col-md-6 my-3 d-flex justify-content-center ">
-          <img src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="">
+          <img src="./multimedia/imagenes/imagenes index/yoga.jpg" alt="Imagen armonía">
         </div>
       </section>
     </div>
@@ -101,7 +103,7 @@
         <div class="col-xl-12 col-sm-12 col-md-12 p-5 d-flex justify-content-center  flex-column ">
           <h2 class="colorh2">¡Practica con nosotros!</h2>
           <a class="my-5 contenedorropa1" href="./paginas/clases.html"><img
-              src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt=""></a>
+              src="./multimedia/imagenes/imagenes index/practicanosotros.jpg" alt="Imagen gente riendo"></a>
           <p class="colorfondotitulojogger">Sé parte de nuestra familia OA. Contamos con lo que necesitas para vivir una
             experiencia zen.</p>
         </div>
