ultimo commit de la tercera entrega, tiene todo lo que pide la tercera entrega creo

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -66,10 +66,9 @@
         </div>
         <div class="container my-5">
             <div class="row d-flex ">
-                <p class="my-4 contenedorpantalonbackgroundcolor">Somos una tienda que nació con la idea de brindar apoyo y ... ... ...  a la comunidad de meditadores en suramerica Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, enim? Eum ducimus doloribus natus reiciendis earum recusandae, cupiditate eos nulla sunt. Ullam vero eligendi atque magni harum dolore eum? Reiciendis!
-                </p>
+                <p class="my-4 contenedorpantalonbackgroundcolor">Nuestra tienda nació como una inspiración de comunidad y apoyo a quienes buscan un camino más consciente y equilibrado en sus vidas. Creemos que la meditación y el yoga son dos poderosas formas de conectar con nuestra esencia y vivir con más presencia y armonía en el mundo.</p>
                 <img src="../multimedia/imagenes/nosotros/suramerica.jpg" alt="imagen para suramerica">
-                <p class="my-4 contenedorpantalonbackgroundcolor">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quam, nesciunt, ullam laudantium voluptatem dolore dolorum neque debitis impedit excepturi eveniet? Ea sapiente inventore voluptatum temporibus recusandae unde ipsum aliquid?</p>
+                <p class="my-4 contenedorpantalonbackgroundcolor">Buscamos crear una comunidad en Latinoaméricapara brindar un espacio en el que puedas conectarte con otras personas que comparten tus intereses y valores.Queremos contribuir a la transformación de la sociedad desde nuestra tienda, promoviendo valores como la empatía, la inclusión y el respeto. ¡Únete a nuestra comunidad!</p>
             </div>
         </div>
         <div class="container my-5 ">
